GH#1007 Added min-height to avoid overflow:hidden blockage

--- a/app/assets/css/rtmedia.css
+++ b/app/assets/css/rtmedia.css
@@ -2731,6 +2731,7 @@ a.rtmedia-upload-media-link {
 
 #buddypress #item-body {
   padding: 0 0 20px 20px;
+  min-height: 240px;
 }
 #buddypress .mejs-controls button {
   padding: 4px 8px;
