--- a/app/assets/css/sass/_media-element.scss
+++ b/app/assets/css/sass/_media-element.scss
@@ -2,6 +2,7 @@
 
 	#item-body {
 		padding: 0 0 20px 20px;
+		min-height: 240px;
 	}
 
 	.mejs-controls {
